Resolve Docker issues

--- a/terraform/ecs-node/app/Dockerfile
+++ b/terraform/ecs-node/app/Dockerfile
@@ -5,13 +5,13 @@ FROM node:12.7.0-alpine
 WORKDIR '/app'
 
 # Copy package.json to the working directory
-COPY package.json .
+COPY ./src/package.json .
 
 # Install any needed packages specified in package.json
 RUN yarn
 
 # Copying the rest of the code to the working directory
-COPY . .
+COPY ./src .
 
 # Make port 3000 available to the world outside this container
 EXPOSE 3000
